TEST_PROGRAMS/VALID_TYPECHECK/append.go
package main;

func main (){

    var x int = 5;
    var s [] int;
    s = append(s,x)

}
