TEST_PROGRAMS/INVALID/15/weeding4.go
package error

func f(){
    var x []int
    append(x, 5)
}
